# LedPi-Cpp

./: CMakeLists.txt  Dockerfile  conanfile.txt  config.json
src/: main.cpp
src/config/: application-config.hpp  config.cpp  config.h  network-config.hpp  strip-config.hpp
src/effects/: BaseEffect.cpp  BaseEffect.h  Effect.hpp  EffectRegistry.hpp  IEffect.h
src/effects/basic/: Fireflicker.hpp  Scan.hpp  Solid.hpp  Strobe.hpp  all.h
src/effects/internal/: Connecting.hpp
src/network/: MQTTClient.hpp  PacketReciever.cpp  PacketReciever.h  RemoteStripServer.cpp  RemoteStripServer.h
src/network/mqtt/: ConnectListener.hpp  ConnectListener_fwd.h  OperationListener.cpp  OperationListener.h
src/network/mqtt/command/: BaseCommandRegister.hpp  StripCommandRegister.hpp
src/strip/: BaseStrip.cpp  BaseStrip.h  IStrip.h  NativeStrip.hpp  RemoteStrip.hpp  StripOpertation.h  strip-factory.hpp
